--- a/templates/posición/puesto.html
+++ b/templates/posición/puesto.html
@@ -1,3 +1,6 @@
 <h1>acá juego</h1>
 
-{{ form.as_p }}
+<form method='POST'>{% csrf_token %}
+    {{ form.as_p}}
+    <button type='submit'> guardar</button>
+</form>
