--- a/templates/jugador/list-jugador.html
+++ b/templates/jugador/list-jugador.html
@@ -1,33 +1,40 @@
-<h1>Lista de jugadores</h1>
+{% extends 'base.html' %}
 <a href="{% url 'jugador_app:jugadorxnombre'%}">buscar</a>
 
 {% block content %}
-<ul>
+  <ul>
     <table class="unstriped">
-        <thead style=>
-          <tr>
-            <th width="200">Nombre</th>
-            <th width="200">Apellido</th>
-            <th width="200">Sueldo</th>
-            <th width="200">Acciones</th>
-          </tr>
-        </thead>
         <tbody>
-          {% for jugador in jugadores %}
-          <tr>
-            <td>{{ jugador.nombre}}</td>
-            <td>{{ jugador.apellido}}</td>
-            <td>{{ jugador.sueldo}}</td>
-            <td>
-              <a href="{% url 'jugador_app:jugadordetail' jugador.id %}">Ver</a>
-              <a href="{% url 'jugador_app:modificar' jugador.id %}">Modificar</a>
-              <a href="{% url 'jugador_app:del-jugador' jugador.id %}">Eliminar</a>
-            </td>
-          </tr>
-          {% endfor %}
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Sueldo</th>
+                <th scope="col">Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for jugador in jugadores %}
+                <tr>
+                  <th scope="row">1</th>
+                  <td>{{ jugador.nombre}}</td>
+                  <td>{{ jugador.apellido}}</td>
+                  <td>{{ jugador.sueldo}}</td>
+                  <td>
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                      <a class="btn btn-info" href="http://127.0.0.1:8000/detail-jugador/%3Cpk%3E/">ver</a>
+                      <a class="btn btn-warning">modificar</a>
+                      <a class="btn btn-danger">borrar</a>
+                    </div>
+                  </td>
+                </tr>              
+              {% endfor %}
+            </tbody>
         </tbody>
     </table>          
-</ul>
+  </ul>
 {%endblock%}
 
 <a href="{% url 'jugador_app:agr_país'%}">Agregar País</a>
