--- a/templates/posición/del-puesto.html
+++ b/templates/posición/del-puesto.html
@@ -7,7 +7,7 @@
         <form method='POST'>{% csrf_token %} 
     
             <p> Confirme que desea eliminar </p>
-            <button type='submit' class="bg-success text-white border"  > Confirmar </button>
+            <button type='submit' class="bg-warning" > Confirmar </button>
             
         </form>
     </div>
