--- a/templates/jugador/mod-jugador.html
+++ b/templates/jugador/mod-jugador.html
@@ -1,6 +1,17 @@
-<h1>modificar jugador</h1>
+{% extends 'base.html' %}
 
-<form method='POST'>{% csrf_token %}
-    {{ form.as_p }}
-    <button type='sumit'>Actualizar</button>
-</form>
+
+{% block content %}
+<div class="card text-bg-success mb-3" style="max-width: 18rem;">
+    <div class="card-body">
+      <p class="card-text">
+        <div class="col-6 bg-success ">
+            <form method='POST'>{% csrf_token %}
+                {{ form.as_p}}
+                <button type='submit' class="bg-danger border text-white">Modificar</button>
+            </form>
+        </div>
+      </p>  
+    </div>
+<div>
+{% endblock content %}
