--- a/templates/país/regist-país.html
+++ b/templates/país/regist-país.html
@@ -1,8 +1,19 @@
-<h1>Agregar País</h1>
-
-<form method='POST'>{% csrf_token %}
-    {{ form.as_p}}
-    <button type='submit'> registrar</button>
-</form>
+{% extends 'base.html' %}
 
 
+{% block content %}
+<div class="card text-bg-success mb-3" style="max-width: 18rem;">
+    <div class="card-header">
+    <h5>País y club</h5>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text">
+        <form method='POST'>{% csrf_token %}
+            {{ form.as_p}}
+            <button type='submit' class="bg-danger text-white border" > registrar</button>
+        </form>
+      </p>
+    </div>
+  </div>  
+{% endblock content %}
