edad cantidad y txt

--- a/templates/jugador/list-jugador.html
+++ b/templates/jugador/list-jugador.html
@@ -19,7 +19,9 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li><a class="dropdown-item" href="{% url 'jugador_app:jugadorxnombre'%}">Buscar Jugador</a></li>
+                <li><a class="dropdown-item" href="{% url 'jugador_app:cantidad'%}">Cantidad Jugadores</a></li>
                 <li><a class="dropdown-item" href="{% url 'jugador_app:país_join'%}">Join/País</a></li>
+                <li><a class="dropdown-item" href="{% url 'jugador_app:leer'%}">Registro</a></li>
               </ul>
             </li>
           </ul>
