--- a/templates/jugador/sueldo-jugador.html
+++ b/templates/jugador/sueldo-jugador.html
@@ -47,9 +47,9 @@
                 <td>{{ s.sueldo}}</td>
                 <td>
                   <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <a class="btn btn-info" href="#"  role="button">ver</a>
-                    <a class="btn btn-warning" href="#">modificar</a>
-                    <a class="btn btn-danger" href="#">borrar</a>
+                    <a class="btn btn-info" href="#"  role="button"></a>
+                    <a class="btn btn-warning" href="#"></a>
+                    <a class="btn btn-danger" href="#"></a>
                   </div>
                 </td>
               </th>
@@ -57,6 +57,6 @@
           {% endfor %}
         </tbody>
       </table> 
-      <a class="btn btn-primary " href="#" role="button">Nuevo Jugador</a>    
+      <a class="btn btn-primary " href="#" role="button"></a>    
   </ul>
 {% endblock content %}
