--- a/templates/jugador/numero.html
+++ b/templates/jugador/numero.html
@@ -4,14 +4,12 @@
 {% block content %}
   <div class="card text-bg-success mb-3" style="max-width: 18rem;">
     <div class="card-header">
-    <h5>Cantidad de Jugadores</h5>
+    <h5>Número de jugadores</h5>
     </div>
     <div class="card-body">
       <h5 class="card-title"></h5>
       <p class="card-text">
-        <ul>
-          {{ form.as_p }}
-        </ul>
+        {{ num_jugadores }}
       </p>
     </div>
   </div> 
