--- a/templates/jugador/sueldo-bajo.html
+++ b/templates/jugador/sueldo-bajo.html
@@ -11,7 +11,7 @@
       <p class="card-text">
         <ul>
     
-            {% for m in mayor %}
+            {% for m in menor%}
                 <li>{{ m.nombre }} - {{ m.apellido }} - {{ m.sueldo }}</li>
             {% endfor %}
                 
