--- a/templates/jugador/edad-actual.html
+++ b/templates/jugador/edad-actual.html
@@ -4,12 +4,14 @@
 {% block content %}
   <div class="card text-bg-success mb-3" style="max-width: 18rem;">
     <div class="card-header">
-    <h5>Promedio de los sueldos</h5>
+    <h5>Datos personales</h5>
     </div>
     <div class="card-body">
       <h5 class="card-title"></h5>
       <p class="card-text">
-        {{ diferencia }}
+        {% for j in jugadores %}
+          <p>{{ j.nombre }} {{ j.apellido }} tiene {{ j.edad }} años.</p>
+        {% endfor %}
       </p>
     </div>
   </div> 
