--- a/templates/jugador/sueldo-prom.html
+++ b/templates/jugador/sueldo-prom.html
@@ -4,18 +4,12 @@
 {% block content %}
   <div class="card text-bg-success mb-3" style="max-width: 18rem;">
     <div class="card-header">
-    <h5>Sueldo más bajo</h5>
+    <h5>Promedio de los sueldos</h5>
     </div>
     <div class="card-body">
       <h5 class="card-title"></h5>
       <p class="card-text">
-        <ul>
-    
-            {% for j in jugadores %}
-                <li>{{ j.nombre }} - {{ j.apellido }} - {{ j.sueldo }}</li>
-            {% endfor %}
-                
-        </ul>
+        {{ promedio }}
       </p>
     </div>
   </div> 
