--- a/templates/jugador/sueldo-jugador.html
+++ b/templates/jugador/sueldo-jugador.html
@@ -32,7 +32,8 @@
     <table class="table table-success table-striped">
         <thead>
           <tr>
-            <th scope="col"> 
+            <th scope="col">
+              <button  type="button" class="btn btn-outline-primary" onclick= "refrescar();">↻</button>
             </th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
