--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             <a class="nav-link text-white" href="{% url 'jugador_app:sueldos'%}">Salarios</a>
             <a class="nav-link text-white" href="{% url 'jugador_app:list_país'%}">País/Club</a>
             <a class="nav-link text-white" href="{% url 'jugador_app:posiciones'%}">Posición</a>
+            <a class="nav-link text-white" href="{% url 'jugador_app:listapdf'%}">PDF</a>
           </nav>
         </div>
         <div class="col-10 col-sm-10 border">
@@ -30,6 +31,16 @@
       </div>
     </div> 
 <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script>
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementsByTagName('body')[0]; 
+      }, 1000)
+    }
+    function refrescar() {
+      location.reload();
+    }
+  </script>    
 </body>
 </html>
