--- a/templates/jugador/list-jugador.html
+++ b/templates/jugador/list-jugador.html
@@ -33,7 +33,9 @@
       <table class="table table-success table-striped">
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">
+              <button  type="button" class="btn btn-outline-primary" onclick= "refrescar();">↻</button>
+            </th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col">Sueldo</th>
